# Lumen

./: .gitignore  Cargo.toml  LUMEN_APPIMAGE_ISSUE_FINDINGS.md  PROGRESS.md  README.md  version.json
.github/workflows/: release.yml
gui/src/: index.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
keys/: public_key.txt
orchestrator/: Cargo.toml
orchestrator/squashfs-root/: .DirIcon  AppRun
orchestrator/squashfs-root/usr/share/lumen/config/preview/: topology.json
orchestrator/src/: binary_manager.rs  config.rs  error.rs  main.rs  mithril.rs  node_manager.rs  system_check.rs  system_detect.rs  updater.rs
packaging/: sign-release.sh
packaging/linux/: AppRun  build-appimage.sh  lumen.desktop
tools/: keygen.rs  keygen_standalone.rs
