[workspace]
resolver = "2"
members = ["orchestrator", "gui/src-tauri", "disk_debug"]

[workspace.package]
version = "0.3.10"
edition = "2021"
authors = ["Lumen Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Oclivion/Lumen"
description = "Self-contained, auto-updating Cardano node distribution"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Process management
nix = { version = "0.29", features = ["signal", "process", "fs"] }

# Random number generation
rand = "0.8"
which = "6.0"

# File system
dirs = "5.0"
tempfile = "3.12"
fs_extra = "1.3"

# Progress indicators
indicatif = "0.17"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }
tokio-util = { version = "0.7", features = ["io"] }

# Semver
semver = { version = "1.0", features = ["serde"] }

# Archive handling
tar = "0.4"
flate2 = "1.0"
