[package]
name = "lumen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cardano node orchestrator with auto-updates and Mithril support"

[[bin]]
name = "lumen"
path = "src/main.rs"

[[bin]]
name = "lumen-keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "lumen-sign"
path = "src/bin/sign_release.rs"

[[bin]]
name = "lumen-verify"
path = "src/bin/verify_release.rs"

[[bin]]
name = "test-error-format"
path = "src/bin/test_error_format.rs"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
hex.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
nix.workspace = true
rand.workspace = true
which.workspace = true
dirs.workspace = true
tempfile.workspace = true
fs_extra.workspace = true
indicatif.workspace = true
chrono.workspace = true
futures.workspace = true
async-compression.workspace = true
tokio-util.workspace = true
semver.workspace = true

# For smart binary management
tar = "0.4"
flate2 = "1.0"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
